--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div>¡Captura un Pokémon!</div>
-    <button id="captura">Capturar</button>
+    <button id="btnCaptura">Capturar</button>
     <div id="capturado"></div>
 
-    <script src="./src/js/index.js"></script>
+    <script type="module" src="./src/js/index.js"></script>
 </body>
 </html>
